*ContactUs 0.1.4 (Unreleased)*

* Added German locale

*ContactUs 0.1.3 (September 2, 2011)*

* Added Brazilian Portuguese locale [brunoarueira]

* Added Spanish locale [igmarin]

* Added Italian locale [igmarin]

*ContactUs 0.1.2 (August 18, 2011)*

* 100% Test Coverage under Ruby 1.8.7, 1.9.2, 1.9.3, REE, ruby-head, rbx-2.0 [Jeff Dutil]