@@ -3,7 +3,7 @@ class ContactUs::ContactMailer < ActionMailer::Base
     @message = contact.message
 
     mail :from    => contact.email,
-         :subject => "Contact Us message from #{contact.email}",
+         :subject => t('contact_us.contact_mailer.contact_email.subject', :email => contact.email),
          :to      => ContactUs.mailer_to
   end
 end
