@@ -6,6 +6,7 @@ en:
     contact_mailer:
       contact_email:
         sent_by_contact_form: "Sent by contact form."
+        subject: "Contact Us message from %{email}"
     contacts:
       new:
         contact_us: "Contact Us"
